fix the spacing issue on the header on mobile page

--- a/style.less
+++ b/style.less
@@ -827,9 +827,14 @@ body.page-m{
 		float: left;
 		background: #888;
 		margin-top: 30px;
+		font-size: 16px;
+		font-weight: 100;
 		width: 100%;
 		display: block;
-		padding: 15px 40px 5px;
+		padding: 15px 40px 15px;
+		color: white;
+			a{color: white; }
+
 	}
 }
 
